[package]
name = "crossword_editor"
version = "0.1.0"
authors = ["José Pedro Dias <jose.pedro.dias@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ncurses = "5.101.0"
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.63"

#[profile.release]
# ## strip executable
#opt-level = 'z'  # Optimize for size.
#lto = true
#panic = 'abort'
